arc: Fix appearing duplicate icons in recent.

Filter out Arc apps that should not come to Arc app list
search result.

TEST=Manually
BUG=640253
BUG=b/30977618

Review-Url: https://codereview.chromium.org/2270733003
Cr-Commit-Position: refs/heads/master@{#413819}

Former-commit-id: 4b6f8dc28e19c486554dba2bc8855781cd724ca5